2009-12-16  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: New file.
	* GNU_GPL.txt: New file (GNU GPLv2 license).
	* index.html: Move to "htdocs" directory.
	* ivmai/dns/DNSConnection.java: Move to "src/net/sf/ivmaidns/dns".
	* ivmai/dns/DNSMsgHeader.java: Ditto.
	* ivmai/dns/DNSName.java: Ditto.
	* ivmai/dns/DNSRecAltCmp.java: Ditto.
	* ivmai/dns/DNSRecord.java: Ditto.
	* ivmai/storage/FilterStorage.java: Move to
	"src/net/sf/ivmaidns/storage".
	* ivmai/storage/HashedStorage.java: Ditto.
	* ivmai/storage/IntStorage.java: Ditto.
	* ivmai/storage/ListStorage.java: Ditto.
	* ivmai/storage/ObjectStorage.java: Ditto.
	* ivmai/storage/SortedStorage.java: Ditto.
	* ivmai/storage/Storage.java: Ditto.
	* ivmai/storage/StorageEnumerator.java: Ditto.
	* ivmai/storage/StorageEvent.java: Ditto.
	* ivmai/storage/TreeStorage.java: Ditto.
	* ivmai/util/ActivityCore.java: Move to "src/net/sf/ivmaidns/util".
	* ivmai/util/BooleanVector.java: Ditto.
	* ivmai/util/ByteVector.java: Ditto.
	* ivmai/util/CharVector.java: Ditto.
	* ivmai/util/ConstPair.java: Ditto.
	* ivmai/util/ConstVector.java: Ditto.
	* ivmai/util/DoubleVector.java: Ditto.
	* ivmai/util/FloatVector.java: Ditto.
	* ivmai/util/GComparator.java: Ditto.
	* ivmai/util/Immutable.java: Ditto.
	* ivmai/util/Indexable.java: Ditto.
	* ivmai/util/IntVector.java: Ditto.
	* ivmai/util/JavaConsts.java: Ditto.
	* ivmai/util/Lockable.java: Ditto.
	* ivmai/util/LongVector.java: Ditto.
	* ivmai/util/Metricable.java: Ditto.
	* ivmai/util/MultiObservable.java: Ditto.
	* ivmai/util/Notifiable.java: Ditto.
	* ivmai/util/ObjectVector.java: Ditto.
	* ivmai/util/ObservedCore.java: Ditto.
	* ivmai/util/ParserException.java: Ditto.
	* ivmai/util/PseudoRandom.java: Ditto.
	* ivmai/util/ReallyCloneable.java: Ditto.
	* ivmai/util/SafeRunnable.java: Ditto.
	* ivmai/util/ShortVector.java: Ditto.
	* ivmai/util/Sortable.java: Ditto.
	* ivmai/util/StrComparator.java: Ditto.
	* ivmai/util/ToString.java: Ditto.
	* ivmai/util/TrimToSizeable.java: Ditto.